// A very simple protocol definition, consisting of only
// one message.


message Untyped {
  required int64 phys_addr = 1;
  required int64 size = 2;
  required int64 cap = 3;
}

message InitData {
  optional string proc_name = 1;
  repeated Untyped untyped_list = 2;
}
